# bufr2netcdf

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  ChangeLog  Makefile.am  NEWS.md  README.md  bufr2netcdf.spec  configure.ac  meson.build  run-local  run-local.in  runtest
doc/: bufrx2netcdf_differences.txt
fedora/SPECS/: bufr2netcdf.spec
m4/: netcdf.m4
src/: Makefile.am  arrays-test.cc  arrays-tut.cc  arrays.cc  arrays.h  bufr2netcdf.cc  compat.h  convert-test.cc  convert-tut.cc  convert.cc  convert.h  meson.build  mnemo-test.cc  mnemo-tut.cc  mnemo.cc  mnemo.h  namer-test.cc  namer-tut.cc  namer.cc  namer.h  ncoutfile-test.cc  ncoutfile-tut.cc  ncoutfile.cc  ncoutfile.h  options.h  plan-test.cc  plan-tut.cc  plan.cc  plan.h  utils.cc  utils.h  valarray-test.cc  valarray-tut.cc  valarray.cc  valarray.h
src/nccmp/: Makefile.am  README  common.h  nccmp.c  nccmp.h  ncinfo.c  ncinfo.h  opt.c  opt.h  strlist.c  strlist.h
src/tests/: tests-main.cc  tests.cc  tests.h
tables/: mnem_000  mnem_001  mnem_002  mnem_003  mnem_004  mnem_006  mnem_008  mnem_010  mnem_012  mnem_013  mnem_014  mnem_015  mnem_017  mnem_018  mnem_019  mnem_020  mnem_021  mnem_022  mnem_024  mnem_025  mnem_026  mnem_039  mnem_040  mnem_041
tables/tabellen_v3/: mnem_028
test/bufr/: AMSUA.bufr  bug_temp  cdfin_acars  cdfin_acars_uk  cdfin_acars_us  cdfin_amdar  cdfin_buoy  cdfin_pilot  cdfin_pilot_p  cdfin_radar_vad  cdfin_rass  cdfin_ship  cdfin_temp  cdfin_tempship  cdfin_wprof  issue7.bufr
test/bufr/doc/: check_status
test/netcdf/: cdfin_acars  cdfin_acars_uk  cdfin_acars_us  cdfin_amdar  cdfin_buoy  cdfin_gps_zenith  cdfin_pilot  cdfin_pilot_p  cdfin_radar_vad  cdfin_rass  cdfin_ship  cdfin_synop  cdfin_temp  cdfin_tempship  cdfin_wprof
