## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src .

dist_table_DATA = \
	tables/mnem_000 \
	tables/mnem_001 \
	tables/mnem_002 \
	tables/mnem_003 \
	tables/mnem_004 \
	tables/mnem_005 \
	tables/mnem_006 \
	tables/mnem_007 \
	tables/mnem_008 \
	tables/mnem_009 \
	tables/mnem_010 \
	tables/mnem_011 \
	tables/mnem_012 \
	tables/mnem_013 \
	tables/mnem_014 \
	tables/mnem_015 \
	tables/mnem_016

EXTRA_DIST = ChangeLog run-local runtest test/bufr test/netcdf bufr2netcdf.spec m4
